# ess-helm

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  README.md  REUSE.toml  artifacthub-repo.yaml  certificates.yaml.template  cloudflare-api-token-secret.yaml.template  config.sh.template  cspell.config.yaml  ct.yaml  docker-bake.hcl  ess-custom-values.yaml.template  external-nginx.conf.template  install.sh  letsencrypt-clusterissuer.yaml.template  livekit-turn-tls-nodeport-service.yaml.template  livekit-turn-udp-nodeport-service.yaml.template  poetry.toml  pyproject.toml  run-ip-updater.sh.template  setup.sh  update-dynamic-ip.py.template
.github/: CODEOWNERS  dependabot.yml  element-docs-words.txt  element-docs-words.txt.license  zizmor.yml
.github/actions/asdf-cache/: action.yml
.github/workflows/: actions-linting.yml  artifact-hub.yml  build-test.yml  changelog_check.yml  licensing.yml  matrix-tools.yml  packages-linting.yml  packages-publish.yml  packages.yml  pytest.yml  releasing.yml  scripts-linting.yml  templates-dyff-comment.yml  templates-dyff.yml
charts/element-web/: Chart.yaml
charts/ess-library/: Chart.yaml
charts/matrix-stack/: .helmignore  Chart.yaml  NOTES.txt  README.md  values.schema.json  values.yaml
charts/matrix-stack/ci/: all-enabled-values.yaml  element-admin-checkov-values.yaml  element-admin-minimal-values.yaml  element-web-checkov-values.yaml  element-web-extra-values.yaml  element-web-minimal-values.yaml  example-default-enabled-components-checkov-values.yaml  example-default-enabled-components-values.yaml  hookshot-checkov-values.yaml  hookshot-dynamic-registration-externally-values.yaml  hookshot-dynamic-registration-in-helm-values.yaml  hookshot-encryption-enabled-values.yaml  hookshot-minimal-values.yaml  hookshot-secrets-externally-values.yaml  hookshot-secrets-in-helm-values.yaml  hookshot-static-registration-externally-values.yaml  hookshot-static-registration-in-helm-values.yaml  matrix-authentication-service-checkov-values.yaml  matrix-authentication-service-external-synapse-values.yaml  matrix-authentication-service-minimal-values.yaml  matrix-authentication-service-postgres-connection-secrets-externally-values.yaml  matrix-rtc-checkov-values.yaml  (+66 more)
charts/synapse/: Chart.yaml
docs/: advanced.md  architecture.md  example-values  maintenance.md  migrating.md  syn2mas.md  troubleshooting.md
matrix-tools/: Dockerfile  README.md  go.mod  go.sum  go.sum.license
matrix-tools/cmd/: main.go
newsfragment/: 1206.doc.md
newsfragments/: 1000.added.md  1001.added.1.md  1001.added.md  1001.changed.md  1002.added.md  1003.internal.md  1006.added.md  1007.added.1.md  1007.added.md  1008.changed.md  1010.changed.1.md  1010.changed.2.md  1010.fixed.md  1014.changed.md  1015.internal.md  1016.internal.md  1018.changed.md  1022.internal.md  1029.external-redis.added.md  1030.internal.md  1031.changed.md  1034.changed.md  1035.changed.md  1036.internal.md  1037.doc.md  1039.doc.md  1042.changed.md  1051.doc.md  1052.added.md  1053.added.md  1054.changed.md  1055.fixed.1.md  1055.fixed.md  1056.added.md  1057.internal.md  1062.fixed.md  1062.internal.md  1063.internal.md  1064.internal.md  1066.changed.md  (+565 more)
scripts/: ansible-docker-deploy-to-values.sh  assemble_ci_values_files_from_fragments.sh  assemble_helm_charts_from_fragments.sh  check_newsfragment.sh  check_semver.py  checkov.sh  construct_helm_schema.py  construct_helm_values.py  ct-lint.sh  destroy_test_cluster.sh  generate-signing-key.py  set_chart_version.sh  setup_test_cluster.sh  spdx_check_all_files.py  spdx_check_changed_file.py  test_construct_helm_schema.py  towncrier_to_helm_annotation.py  uv.toml  verify_images.sh
scripts/migration/: __init__.py  __main__.py  engine.py  extra_files.py  inputs.py  interfaces.py  mas.py  migration.py  models.py  outputs.py  secrets.py  synapse.py  utils.py
tests/: README.md  pyproject.toml
tests/integration/: conftest.py  scripts.py  test_element_admin.py  test_element_call.py  test_element_web.py  test_hookshot.py  test_matrix_authentication_service.py  test_networking.py  test_pods.py  test_setup.py  test_syn2mas.py  test_synapse.py  test_well_known_delegation.py
tests/integration/artifacts/: __init__.py  certs.py
tests/integration/artifacts/files/: minimal.png.license
tests/integration/env/: element-admin.rc  element-web.rc  hookshot-with-mas.rc  hookshot.rc  matrix-authentication-service-syn2mas.rc  matrix-authentication-service.rc  matrix-rtc-standalone.rc  matrix-rtc-synapse-wellknown.rc  synapse.rc  well-known-delegation.rc
tests/integration/fixtures/: __init__.py  ca.py  cluster.py  data.py  helm.py  matrix_tools.py  syn2mas.py  users.py
tests/integration/fixtures/files/charts/: cert-manager.yml  ingress-nginx.yml  metrics-server.yml
tests/integration/fixtures/files/clusters/: audit-policy.yml  k3d.yml  kind.yml  traefik.yml
tests/integration/fixtures/files/clusters/local_mirrors/localhost:5000/: hosts.toml
tests/integration/fixtures/files/clusters/local_mirrors/localhost_5000_/: hosts.toml
tests/integration/lib/: helpers.py  matrix_authentication_service.py  synapse.py  utils.py
tests/integration/services/: __init__.py
tests/manifests/: __init__.py  conftest.py  oci_helpers.py  test_annotations.py  test_basic.py  test_configs.py  test_configs_and_mounts_consistency.py  test_configs_consistency.py  test_deployments.py  test_element_web.py  test_haproxy.py  test_helm_hooks.py  test_hookshot.py  test_ingress_services.py  test_ingress_tls.py  test_ingresses.py  test_labels.py  test_manifest_test_infrastructure.py  test_mas_config_schema.py  test_matrix_authentication_service.py  test_matrix_rtc.py  test_pod_arguments.py  test_pod_containers_ports.py  test_pod_env.py  test_pod_hostAliases.py  test_pod_idempotency.py  test_pod_images.py  test_pod_nodeSelector.py  test_pod_probes.py  test_pod_pull_secrets.py  test_pod_replicas.py  test_pod_resources.py  test_pod_restartPolicy.py  test_pod_securityContext.py  test_postgres.py  test_pvcs.py  test_secrets.py  test_service_monitors.py  test_serviceaccounts.py  test_services.py  (+8 more)
(+369 files in other folders)
