# Copyright 2024-2025 New Vector Ltd
# Copyright 2025-2026 Element Creations Ltd
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "ess-community"
description = ""
version = "0.1.0"
license = "AGPL-3.0-Only, Element Commercial"
readme = "README.md"
package-mode = false
requires-python = ">=3.11.7,<4.0"
dependencies = []

[tool.uv]
[dependency-groups]
dev = [
  "aiohttp>=3.13.3",
  "checkov>=3.2.506",
  "cryptography>=46.0.5",
  "ess-community-integration-tests",
  "frozendict>=2.4.7",
  "jinja2>=3.1.6",
  "jsonschema>=4.26",
  "mypy>=1.19.1",
  "platformdirs>=4.9.2",
  "pytest>=8.4.2,<9", # pytest 9 is causing issues with asyncio-cooperative
  "pytz>=2025.2",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.3",
  "reuse>=6.2.0",
  "ruamel-yaml>=0.19.1",
  "ruff>=0.15.4",
  "semver>=3.0.4",
  "signedjson>=1.1.4",
  "spdx-tools>=0.8.3",
  "towncrier>=25.8.0",
  "typer>=0.24.1",
  "types-cryptography>=3.3.23.2",
  "types-jsonschema>=4.26.0.20260202",
  "types-pytz>=2025.2.0.20251108",
  "types-pyyaml>=6.0.12.20250915",
  "yamale>=6.1.0",
  "yamllint>=1.38.0",
]

[tool.uv.workspace]
members = ["packages/*", "tests"]

[tool.uv.sources]
ess-community-integration-tests = { workspace = true }
ess-migration-tool = { workspace = true }

[tool.pytest.ini_options]
# we use asyncio-cooperative
addopts = "-p no:asyncio --strict-markers"
max_asyncio_tasks = 32

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-pytest-style
    "PT",
]

[tool.towncrier]
package = ""
directory = "newsfragments"
name = "ESS Community Helm Chart"
filename = "CHANGELOG.md"

# See artifacthub changes kinds https://artifacthub.io/docs/topics/annotations/helm/
# "When using the list of objects option the valid supported kinds are added, changed, deprecated, removed, fixed and security."

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed / Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[[tool.mypy.overrides]]
module = ["pyhelm3.*", "pytest_kubernetes.*"]
follow_untyped_imports = true
